--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
             <div class="contact-info">
                 <h3>Contact Us</h3>
                 <p>
-                    <a href="mailto:info@classictailors.com?subject=Enquiry%20from%20Classic%20Tailors%20Website&body=Hi%2C%20I%20have%20an%20enquiry." aria-label="Email Classic Tailors">
-                        <i class="fas fa-envelope" aria-hidden="true"></i> info@classictailors.com
+                    <a href="mailto:classic.tailors.dxb@gmail.com?subject=Enquiry%20from%20Classic%20Tailors%20Website&body=Hi%2C%20I%20have%20an%20enquiry." aria-label="Email Classic Tailors">
+                        <i class="fas fa-envelope" aria-hidden="true"></i> classic.tailors.dxb@gmail.com
                     </a>
                 </p>
                 <p><i class="fas fa-phone"></i> <a href="tel:+971556004700" aria-label="Call Classic Tailors">+971 55 600 4700</a></p>
